@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.security.MessageDigest;
@@ -23,7 +22,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
@@ -100,7 +98,7 @@ public class DatabaseService implements DatabaseServiceInterface {
             ApplicationProperties.Datasource datasourceProps,
             DataSource dataSource,
             DatabaseNotificationServiceInterface backupNotificationService) {
-        this.BACKUP_DIR = Paths.get(InstallationPathConfig.getBackupPath()).normalize();
+        this.BACKUP_DIR = Path.of(InstallationPathConfig.getBackupPath()).normalize();
         this.datasourceProps = datasourceProps;
         this.dataSource = dataSource;
         this.backupNotificationService = backupNotificationService;
@@ -111,7 +109,7 @@ public class DatabaseService implements DatabaseServiceInterface {
     @Deprecated(since = "2.0.0", forRemoval = true)
     private void moveBackupFiles() {
         Path sourceDir =
-                Paths.get(InstallationPathConfig.getConfigPath(), "db", "backup").normalize();
+                Path.of(InstallationPathConfig.getConfigPath(), "db", "backup").normalize();
 
         if (!Files.exists(sourceDir)) {
             log.info("Source directory does not exist: {}", sourceDir);
@@ -217,7 +215,7 @@ public class DatabaseService implements DatabaseServiceInterface {
         List<FileInfo> backupList = this.getBackupList();
         backupList.sort(Comparator.comparing(FileInfo::getModificationDate).reversed());
 
-        Path latestExport = Paths.get(backupList.get(0).getFilePath());
+        Path latestExport = Path.of(backupList.get(0).getFilePath());
 
         executeDatabaseScript(latestExport);
     }
@@ -258,9 +256,13 @@ public class DatabaseService implements DatabaseServiceInterface {
     @Override
     public void exportDatabase() {
         List<FileInfo> filteredBackupList =
-                this.getBackupList().stream()
-                        .filter(backup -> !backup.getFileName().startsWith(BACKUP_PREFIX + "user_"))
-                        .collect(Collectors.toList());
+                new ArrayList<>(
+                        this.getBackupList().stream()
+                                .filter(
+                                        backup ->
+                                                !backup.getFileName()
+                                                        .startsWith(BACKUP_PREFIX + "user_"))
+                                .toList());
 
         if (filteredBackupList.size() > 5) {
             deleteOldestBackup(filteredBackupList);
@@ -341,7 +343,7 @@ public class DatabaseService implements DatabaseServiceInterface {
 
         for (FileInfo backup : backupList) {
             try {
-                Files.deleteIfExists(Paths.get(backup.getFilePath()));
+                Files.deleteIfExists(Path.of(backup.getFilePath()));
                 deletedFiles.add(Pair.of(backup, true));
             } catch (IOException e) {
                 log.error("Error deleting backup file: {}", backup.getFileName(), e);
@@ -359,7 +361,7 @@ public class DatabaseService implements DatabaseServiceInterface {
         if (!backupList.isEmpty()) {
             FileInfo lastBackup = backupList.get(backupList.size() - 1);
             try {
-                Files.deleteIfExists(Paths.get(lastBackup.getFilePath()));
+                Files.deleteIfExists(Path.of(lastBackup.getFilePath()));
                 deletedFiles.add(Pair.of(lastBackup, true));
             } catch (IOException e) {
                 log.error("Error deleting last backup file: {}", lastBackup.getFileName(), e);
@@ -381,7 +383,7 @@ public class DatabaseService implements DatabaseServiceInterface {
                             p -> p.getFileName().substring(7, p.getFileName().length() - 4)));
 
             FileInfo oldestFile = filteredBackupList.get(0);
-            Files.deleteIfExists(Paths.get(oldestFile.getFilePath()));
+            Files.deleteIfExists(Path.of(oldestFile.getFilePath()));
             log.info("Deleted oldest backup: {}", oldestFile.getFileName());
         } catch (IOException e) {
             log.error("Unable to delete oldest backup, message: {}", e.getMessage(), e);
